updated index.html, main.css

--- a/index.html
+++ b/index.html
@@ -3,10 +3,10 @@
 	Transitive by TEMPLATED
 	templated.co @templatedco
 	Released for free under the Creative Commons Attribution 3.0 license (templated.co/license)
---><html><head><title>Transitive by TEMPLATED</title><meta charset="utf-8"><meta name="robots" content="index, follow, max-image-preview:large, max-snippet:-1, max-video-preview:-1"><meta name="viewport" content="width=device-width, initial-scale=1"><link rel="stylesheet" href="assets/css/main.css"></head><body>
+--><html><head><title>Amicus Church at UCSD</title><meta charset="utf-8"><meta name="robots" content="index, follow, max-image-preview:large, max-snippet:-1, max-video-preview:-1"><meta name="viewport" content="width=device-width, initial-scale=1"><link rel="stylesheet" href="assets/css/main.css"></head><body>
 
 		<!-- Header -->
-			<header id="header" class="alt"><div class="logo"><a href="index.html">Transitive <span>by TEMPLATED</span></a></div>
+			<header id="header" class="alt"><div class="logo"><a href="index.html">Amicus Church <span>at UCSD</span></a></div>
 				<a href="#menu" class="toggle"><span>Menu</span></a>
 			</header><!-- Nav --><nav id="menu"><ul class="links"><li><a href="index.html">Home</a></li>
 					<li><a href="generic.html">Generic</a></li>
@@ -16,10 +16,11 @@
 			its extension (eg. images/banner). Your video must be available in both .mp4 and .webm
 			formats to work correctly.
 		--><section id="banner" data-video="images/banner"><div class="inner">
-					<h1>Transitive</h1>
-					<p>A full responsive, business-oriented HTML5/CSS3 template<br>
-					built by <a href="https://templated.co/">Templated</a> and released under the <a href="https://templated.co/license">Creative Commons</a>.</p>
-					<a href="#one" class="button special scrolly">Get Started</a>
+					<h1>Our Mission</h1>
+					<p>Through authentic friendship, <a href="https://templated.co/">Amicus Church</a> is dedicated <br>to reaching college students 
+					to inspire, encourage, and uplift them <br>to continue their <a href="https://templated.co/license">journey</a> and 
+					find a healthy <a href="https://templated.co/license">community</a> to rest.</p>
+					<a href="#one" class="button special scrolly">Learn More</a>
 				</div>
 			</section><!-- One --><section id="one" class="wrapper style2"><div class="inner">
 					<div>
