--- a/index.html
+++ b/index.html
@@ -28,10 +28,10 @@
 							<div class="image fit">
 								<img src="images/pic01.jpg" alt="" width="3472" height="1035"></div>
 							<div class="content">
-								<header class="align-center"><h2>Lorem ipsum dolor</h2>
+								<header class="align-center"><h2>Amicus Church</h2>
 									<p>maecenas feugiat ex purus, quis volutpat lacus placerat</p>
 								</header><hr><p> Cras aliquet urna ut sapien tincidunt, quis malesuada elit facilisis. Vestibulum sit amet tortor velit. Nam elementum nibh a libero pharetra elementum. Maecenas feugiat ex purus, quis volutpat lacus placerat malesuada. Praesent in sem ex. Morbi mattis sapien pretium tellus venenatis, at egestas urna ornare.</p>
-								<p>Vivamus fermentum nibh vel pharetra blandit. Cras a purus urna. Sed et libero ex. Orci varius natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Suspendisse id hendrerit felis. Nulla viverra tempor dui at congue. Pellentesque quis nulla ornare, congue nisi id, finibus nulla. Aliquam sit amet hendrerit purus. Donec libero massa, posuere fermentum eros sit amet, maximus fringilla augue. Maecenas at rhoncus lorem. Vivamus ultricies consequat est, efficitur convallis libero. Vivamus rutrum semper mauris, vitae consequat eros tempor ac. Pellentesque et ornare sapien</p>
+								<p>The initial purpose of Amicus Church at UC San Diego was primarily for going into the UCSD campus to create a community/worship space for students to bring the church at the campus where they are. Amicus Church like its name wanted to bring the "friendship" inside the campus. However, this initial purpose did not fully bloom since going into the UCSD campus was not the place where most students were. Then, the real question is where is the fundamental place that Amicus Church needed to meet. The answer to the question could be found in the purpose of friendship. The opposite of friendship is loneliness and that was where Amicus Church has to go and meet the students. How can we meet students at where they are at the state of lonliness? We know that no one can fix the problem yet we can be there and walk alongside with students as friends would do. Friends do not necessarily resolve the problem rather friends give encouragement and support to not give up and continue their journey of life together sharing time and space with one another.</p>
 							</div>
 						</div>
 					</div>
