--- a/index.html
+++ b/index.html
@@ -28,10 +28,10 @@
 							<div class="image fit">
 								<img src="images/pic01.jpg" alt="" width="1750" height="750"></div>
 							<div class="content">
-								<header class="align-center"><h2>Amicus Church</h2>
-									<p>maecenas feugiat ex purus, quis volutpat lacus placerat</p>
-								</header><hr><p> Cras aliquet urna ut sapien tincidunt, quis malesuada elit facilisis. Vestibulum sit amet tortor velit. Nam elementum nibh a libero pharetra elementum. Maecenas feugiat ex purus, quis volutpat lacus placerat malesuada. Praesent in sem ex. Morbi mattis sapien pretium tellus venenatis, at egestas urna ornare.</p>
-								<p>The initial purpose of Amicus Church at UC San Diego was primarily for going into the UCSD campus to create a community/worship space for students to bring the church at the campus where they are. Amicus Church like its name wanted to bring the "friendship" inside the campus. However, this initial purpose did not fully bloom since going into the UCSD campus was not the place where most students were. Then, the real question is where is the fundamental place that Amicus Church needed to meet. The answer to the question could be found in the purpose of friendship. The opposite of friendship is loneliness and that was where Amicus Church has to go and meet the students. How can we meet students at where they are at the state of lonliness? We know that no one can fix the problem yet we can be there and walk alongside with students as friends would do. Friends do not necessarily resolve the problem rather friends give encouragement and support to not give up and continue their journey of life together sharing time and space with one another.</p>
+								<header class="align-center"><h2>Welcome to Amicus Church at UCSD</h2>
+									<p>Finding Friendship and Support in Your College Journey</p>
+								</header><hr><p>At Amicus Church, we believe in bringing the church to you, right where you are on campus. Feeling overwhelmed or just need a break? Join us for a moment of friendship and free refreshments! We're here to walk alongside you through your college years with open hearts and open ears.</p>
+								<p>All activities are completely free – because we believe in providing rest and strength to help you thrive at UCSD. Look for our information booth on campus with signs asking, "Do you need some rest and time off?" and tune into soothing Christian music while you take a pause.</p>
 							</div>
 						</div>
 					</div>
@@ -39,18 +39,18 @@
 			</section><!-- Two --><section id="two" class="wrapper style3"><div class="inner">
 					<div id="flexgrid">
 						<div>
-							<header><h3>Tempus Feugiat</h3>
-							</header><p>Morbi interdum mollis sapien. Sed ac risus. Phasellus lacinia, magna a ullamcorper laoreet, lectus arcu</p>
+							<header><h3>Love</h3>
+							</header><p>We believe that genuine friendship begins with a loving heart that goes the extra mile to meet others where they are.</p>
 							<ul class="actions"><li><a href="#" class="button alt">Learn More</a></li>
 							</ul></div>
 						<div>
-							<header><h3>Aliquam Nulla</h3>
-							</header><p>Ut convallis, sem sit amet interdum consectetuer, odio augue aliquam leo, nec dapibus tortor nibh sed </p>
+							<header><h3>Encouragement</h3>
+							</header><p>We value the role of friends in providing encouragement, which is essential for students navigating their college journey.</p>
 							<ul class="actions"><li><a href="#" class="button alt">Learn More</a></li>
 							</ul></div>
 						<div>
-							<header><h3>Sed Magna</h3>
-							</header><p>Suspendisse mauris. Fusce accumsan mollis eros. Pellentesque a diam sit amet mi ullamcorper vehicula.</p>
+							<header><h3>Mentorship</h3>
+							</header><p>We recognize that friendship involves not only sharing time and space but also offering guidance to endure the race set out for them and providing true support toward finding their true purpose in life.</p>
 							<ul class="actions"><li><a href="#" class="button alt">Learn More</a></li>
 							</ul></div>
 					</div>
