--- a/index.html
+++ b/index.html
@@ -86,8 +86,8 @@
 				</div>
 			</section><!-- Four --><section id="four" class="wrapper style3"><div class="inner">
 
-					<header class="align-center"><h2>Morbi interdum mollis sapien</h2>
-						<p>Cras aliquet urna ut sapien tincidunt, quis malesuada elit facilisis. Vestibulum sit amet tortor velit. Nam elementum nibh a libero pharetra elementum. Maecenas feugiat ex purus, quis volutpat lacus placerat malesuada. Praesent in sem ex. Morbi mattis sapien pretium tellus venenatis, at egestas urna ornare.</p>
+					<header class="align-center"><h2>Why join Amicus?</h2>
+						<p>At Amicus Church, you're never alone. Let's navigate the journey of college life together.</p>
 					</header></div>
 			</section><!-- Footer --><footer id="footer" class="wrapper"><div class="inner">
 					<section><div class="box">
