--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 					<div>
 						<div class="box">
 							<div class="image fit">
-								<img src="images/pic01.jpg" alt="" width="1750" height="750"></div>
+								<img src="images/pic01.jpg" alt="" width="1000" height="500"></div>
 							<div class="content">
 								<header class="align-center"><h2>Welcome to Amicus Church at UCSD</h2>
 									<p>Finding Friendship and Support in Your College Journey</p>
@@ -63,9 +63,11 @@
 								<div class="image fit">
 									<img src="images/pic02.jpg" alt="" width="3472" height="1236"></div>
 								<div class="content">
-									<header class="align-center"><h2>Lorem ipsum dolor</h2>
-										<p>maecenas feugiat ex purus, quis volutpat lacus placerat</p>
-									</header><hr><p> Cras aliquet urna ut sapien tincidunt, quis malesuada elit facilisis. Vestibulum sit amet tortor velit. Nam elementum nibh a libero pharetra elementum. Maecenas feugiat ex purus, quis volutpat lacus placerat malesuada. Praesent in sem ex. Morbi mattis sapien pretium tellus venenatis, at egestas urna ornare.</p>
+									<header class="align-center"><h2>Weekly Meetups – Refreshments, Support, and Good Vibes Only</h2>
+										<p><li>Free Coffee Time: Start your morning with warmth.</li>
+											<li>Lunch on Us: Take a break and refuel midday.</li>
+											<li>Hangouts: Relax and recharge with us.</li></p>
+									</header><hr><p></p>
 								</div>
 							</div>
 						</div>
@@ -75,9 +77,12 @@
 								<div class="image fit">
 									<img src="images/pic03.jpg" alt="" width="3472" height="1236"></div>
 								<div class="content">
-									<header class="align-center"><h2>Vestibulum sit amet</h2>
-										<p>mattis sapien pretium tellus venenatis</p>
-									</header><hr><p> Cras aliquet urna ut sapien tincidunt, quis malesuada elit facilisis. Vestibulum sit amet tortor velit. Nam elementum nibh a libero pharetra elementum. Maecenas feugiat ex purus, quis volutpat lacus placerat malesuada. Praesent in sem ex. Morbi mattis sapien pretium tellus venenatis, at egestas urna ornare.</p>
+									<header class="align-center"><h2>Connect with Us:</h2>
+										<p>
+											<li>Grab a flyer from our booth</li>
+											<li>Fill out an interest form</li>
+											<li>Let's meet up – on your time, on your terms</li></p>
+									</header><hr><p></p>
 								</div>
 							</div>
 						</div>
@@ -101,9 +106,14 @@
 										<label for="email">Email</label>
 										<input name="email" id="email" type="email" placeholder="Email"></div>
 									<div class="field">
-										<label for="dept">Department</label>
+										<label for="dept">Year</label>
 										<div class="select-wrapper">
-											<select name="dept" id="dept"><option value="">- Category -</option><option value="1">Manufacturing</option><option value="1">Shipping</option><option value="1">Administration</option><option value="1">Human Resources</option></select></div>
+											<select name="dept" id="dept"><option value="">- Year -</option><option value="1">1st</option><option value="1">2nd</option><option value="1">3rd</option><option value="1">4th</option><option value="1">5th+</option></select></div>
+									</div>
+									<div class="field">
+										<label for="dept">College</label>
+										<div class="select-wrapper">
+											<select name="dept" id="dept"><option value="">- College -</option><option value="1">Revelle</option><option value="1">Muir</option><option value="1">Marshall</option><option value="1">ERC</option><option value="1">Sixth</option><option value="1">Seventh</option><option value="1">Eigth</option><option value="1">Other</option></select></div>
 									</div>
 									<div class="field">
 										<label for="message">Message</label>
