--- a/generic.html
+++ b/generic.html
@@ -29,21 +29,35 @@
             <p>Cras aliquet urna ut sapien tincidunt, quis malesuada elit facilisis. Vestibulum sit amet tortor velit. Nam elementum nibh a libero pharetra elementum. Maecenas feugiat ex purus, quis volutpat lacus placerat malesuada. Praesent in sem ex. Morbi mattis sapien pretium tellus venenatis, at egestas urna ornare.</p>
         </header></div>
 </section><!-- Footer --><footer id="footer" class="wrapper"><div class="inner">
-        <section><div class="box">
+        <sec    tion><div class="box">
                 <div class="content">
                     <h2 class="align-center">Get in Touch</h2>
                     <hr><form action="#" method="post">
                         <div class="field half first">
                             <label for="name">Name</label>
-                            <input name="name" id="name" type="text" placeholder="Name"></div>
+                            <input name="name" id="name" type="text" placeholder="First Name, Last Name" required></div>
                         <div class="field half">
                             <label for="email">Email</label>
-                            <input name="email" id="email" type="email" placeholder="Email"></div>
-                        <div class="field">
-                            <label for="dept">Department</label>
+                            <input name="email" id="email" type="email" placeholder="Email" required></div>
+
+                        <div class="field half first">
+                            <label for="dob">Date of Birth</label>
+                            <input name="dob" id="dob" type="date"></div>
+                        <div class="field half">
+                            <label for="phone">Phone Number</label>
+                            <input name="phone" id="phone" type="tel" pattern="[0-9]{3}-[0-9]{3}-[0-9]{4}" placeholder="123-456-7890" required></div>
+
+                        <div class="field half first">
+                            <label for="dept">Year</label>
                             <div class="select-wrapper">
-                                <select name="dept" id="dept"><option value="">- Category -</option><option value="1">Manufacturing</option><option value="1">Shipping</option><option value="1">Administration</option><option value="1">Human Resources</option></select></div>
+                                <select name="dept" id="dept"><option value="">- Year -</option><option value="1">1st</option><option value="1">2nd</option><option value="1">3rd</option><option value="1">4th</option><option value="1">5th+</option></select></div>
                         </div>
+                        <div class="field half">
+                            <label for="dept">College</label>
+                            <div class="select-wrapper">
+                                <select name="dept" id="dept"><option value="">- College -</option><option value="1">Revelle</option><option value="1">Muir</option><option value="1">Marshall</option><option value="1">ERC</option><option value="1">Sixth</option><option value="1">Seventh</option><option value="1">Eigth</option><option value="1">Other</option></select></div>
+                        </div>
+
                         <div class="field">
                             <label for="message">Message</label>
                             <textarea name="message" id="message" rows="6" placeholder="Message"></textarea></div>
