--- a/about.html
+++ b/about.html
@@ -3,20 +3,22 @@
 	Transitive by TEMPLATED
 	templated.co @templatedco
 	Released for free under the Creative Commons Attribution 3.0 license (templated.co/license)
---><html><head><title>Generic - Transitive by TEMPLATED</title><meta charset="utf-8"><meta name="robots" content="index, follow, max-image-preview:large, max-snippet:-1, max-video-preview:-1"><meta name="viewport" content="width=device-width, initial-scale=1"><link rel="stylesheet" href="assets/css/main.css"></head><body class="subpage">
+--><html><head><title>About Church - Amicus Church at UCSD</title><meta charset="utf-8"><meta name="robots" content="index, follow, max-image-preview:large, max-snippet:-1, max-video-preview:-1"><meta name="viewport" content="width=device-width, initial-scale=1"><link rel="stylesheet" href="assets/css/main.css"></head><body class="subpage">
 
 <!-- Header -->
-<header id="header"><div class="logo"><a href="index.html">Transitive <span>by TEMPLATED</span></a></div>
+<header id="header"><div class="logo"><a href="index.html">Amicus Church <span>at UCSD</span></a></div>
     <a href="#menu" class="toggle"><span>Menu</span></a>
 </header><!-- Nav --><nav id="menu"><ul class="links"><li><a href="index.html">Home</a></li>
-        <li><a href="generic.html">Generic</a></li>
+        <li><a href="about.html">About</a></li>
+        <li><a href="team.html">Team</a></li>
+        <li><a href="contact.html">Contact Us</a></li>
         <li><a href="elements.html">Elements</a></li>
     </ul></nav><!-- One --><section id="one" class="wrapper style2"><div class="inner">
         <div class="box">
             <div class="image fit">
                 <img src="images/pic01.jpg" alt="" width="3472" height="1035"></div>
             <div class="content">
-                <header class="align-center"><h2>Lorem ipsum dolor</h2>
+                <header class="align-center"><h2>Reach the Unreach</h2>
                     <p>maecenas feugiat ex purus, quis volutpat lacus placerat</p>
                 </header><hr><p> Cras aliquet urna ut sapien tincidunt, quis malesuada elit facilisis. Vestibulum sit amet tortor velit. Nam elementum nibh a libero pharetra elementum. Maecenas feugiat ex purus, quis volutpat lacus placerat malesuada. Praesent in sem ex. Morbi mattis sapien pretium tellus venenatis, at egestas urna ornare.</p>
                 <p>Vivamus fermentum nibh vel pharetra blandit. Cras a purus urna. Sed et libero ex. Orci varius natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Suspendisse id hendrerit felis. Nulla viverra tempor dui at congue. Pellentesque quis nulla ornare, congue nisi id, finibus nulla. Aliquam sit amet hendrerit purus. Donec libero massa, posuere fermentum eros sit amet, maximus fringilla augue. Maecenas at rhoncus lorem. Vivamus ultricies consequat est, efficitur convallis libero. Vivamus rutrum semper mauris, vitae consequat eros tempor ac. Pellentesque et ornare sapien</p>
@@ -66,9 +68,56 @@
                 </div>
             </div>
         </section></div>
-</footer><div class="copyright">
-    Powered by: <a href="https://templated.co/">Templated.co</a>.
-</div>
+    </footer><div class="copyright">
+        <a href="index.html">Amicus Church <span>at UCSD</span></a>.
+    </div>
+    
+    <head>
+        <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <title>Contact Icons</title>
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
+        <style>
+            body, html {
+			    height: 100%;
+			    margin: 0;
+			    font-family: Arial, sans-serif;
+			}
+			.content {
+				min-height: 95vh;
+				padding: 20px;
+				background: #f0f0f0;
+			}
+			.contact-box {
+				width: 100%;
+				background: rgba(0, 0, 0, 0.8); /* Semi-transparent black background */
+				color: white;
+				text-align: center;
+				padding: 10px 0;
+			}
+			.icon {
+				font-size: 20px; /* Size of the icon */
+				margin: 0 10px;
+				color: white; /* Icon color */
+			}
+			.icon:hover {
+				color: #007BFF; /* Color when mouse hovers over the icon */
+			}
+        </style>
+        </head>
+        <body>
+        <div class="contact-box">
+            <!-- Instagram Link -->
+            <a href="https://www.instagram.com/ucsd_amicuschurch" target="_blank" class="icon">
+                <i class="fab fa-instagram"></i>
+            </a>
+        
+            <!-- Email Link -->
+            <a href="mailto:amicuschurch.ucsd@gmail.com" class="icon">
+                <i class="fas fa-envelope"></i>
+            </a>
+        </div>
+        </body>
 
 <!-- Scripts -->
 <script src="assets/js/jquery.min.js"></script><script src="assets/js/jquery.scrolly.min.js"></script><script src="assets/js/jquery.scrollex.min.js"></script><script src="assets/js/skel.min.js"></script><script src="assets/js/util.js"></script><script src="assets/js/main.js"></script></body></html>
