--- a/elements.html
+++ b/elements.html
@@ -9,7 +9,9 @@
 <header id="header"><div class="logo"><a href="index.html">Transitive <span>by TEMPLATED</span></a></div>
     <a href="#menu" class="toggle"><span>Menu</span></a>
 </header><!-- Nav --><nav id="menu"><ul class="links"><li><a href="index.html">Home</a></li>
-        <li><a href="generic.html">Generic</a></li>
+        <li><a href="about.html">About</a></li>
+        <li><a href="team.html">Team</a></li>
+        <li><a href="contact.html">Contact Us</a></li>
         <li><a href="elements.html">Elements</a></li>
     </ul></nav><!-- One --><section id="one" class="wrapper style2"><div class="inner">
         <div class="box">
