--- a/index.html
+++ b/index.html
@@ -9,7 +9,9 @@
 			<header id="header" class="alt"><div class="logo"><a href="index.html">Amicus Church <span>at UCSD</span></a></div>
 				<a href="#menu" class="toggle"><span>Menu</span></a>
 			</header><!-- Nav --><nav id="menu"><ul class="links"><li><a href="index.html">Home</a></li>
-					<li><a href="generic.html">Generic</a></li>
+					<li><a href="about.html">About</a></li>
+					<li><a href="team.html">Team</a></li>
+					<li><a href="contact.html">Contact Us</a></li>
 					<li><a href="elements.html">Elements</a></li>
 				</ul></nav><!-- Banner --><!--
 			To use a video as your background, set data-video to the name of your video without
@@ -134,8 +136,55 @@
 						</div>
 					</section></div>
 			</footer><div class="copyright">
-				Powered by: <a href="https://templated.co/">Templated.co</a>.
+				<a href="index.html">Amicus Church <span>at UCSD</span></a>.
 			</div>
-
+			
+			<head>
+				<meta charset="UTF-8">
+				<meta name="viewport" content="width=device-width, initial-scale=1.0">
+				<title>Contact Icons</title>
+				<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
+				<style>
+					body, html {
+						height: 100%;
+						margin: 0;
+						font-family: Arial, sans-serif;
+					}
+					.content {
+						min-height: 95vh;
+						padding: 20px;
+						background: #f0f0f0;
+					}
+					.contact-box {
+						width: 100%;
+						background: rgba(0, 0, 0, 0.8); /* Semi-transparent black background */
+						color: white;
+						text-align: center;
+						padding: 10px 0;
+					}
+					.icon {
+						font-size: 20px; /* Size of the icon */
+						margin: 0 10px;
+						color: white; /* Icon color */
+					}
+					.icon:hover {
+						color: #007BFF; /* Color when mouse hovers over the icon */
+					}
+				</style>
+				</head>
+				<body>
+				<div class="contact-box">
+					<!-- Instagram Link -->
+					<a href="https://www.instagram.com/ucsd_amicuschurch" target="_blank" class="icon">
+						<i class="fab fa-instagram"></i>
+					</a>
+				
+					<!-- Email Link -->
+					<a href="mailto:amicuschurch.ucsd@gmail.com" class="icon">
+						<i class="fas fa-envelope"></i>
+					</a>
+				</div>
+				</body>
+			
 		<!-- Scripts -->
 			<script src="assets/js/jquery.min.js"></script><script src="assets/js/jquery.scrolly.min.js"></script><script src="assets/js/jquery.scrollex.min.js"></script><script src="assets/js/skel.min.js"></script><script src="assets/js/util.js"></script><script src="assets/js/main.js"></script></body></html>
