--- a/index.html
+++ b/index.html
@@ -19,16 +19,16 @@
 			formats to work correctly.
 		--><section id="banner" data-video="images/banner"><div class="inner">
 					<h1>Our Mission</h1>
-					<p>Through authentic friendship, <a href="https://templated.co/">Amicus Church</a> is dedicated <br>to reaching college students 
-					to inspire, encourage, and uplift them <br>to continue their <a href="https://templated.co/license">journey</a> and 
-					find a healthy <a href="https://templated.co/license">community</a> to rest.</p>
+					<p>Through authentic friendship, <a href="about.html">Amicus Church</a> is dedicated <br>to reaching college students 
+					to inspire, encourage, and uplift them <br>to continue their <a href="about.html">journey</a> and 
+					find a healthy <a href="about.html">community</a> to rest.</p>
 					<a href="#one" class="button special scrolly">Learn More</a>
 				</div>
 			</section><!-- One --><section id="one" class="wrapper style2"><div class="inner">
 					<div>
 						<div class="box">
 							<div class="image fit">
-								<img src="images/pic01.jpg" alt="" width="1000" height="500"></div>
+								<img src="images/pic01.jpg" alt="" width="957" height="637"></div>
 							<div class="content">
 								<header class="align-center"><h2>Welcome to Amicus Church at UCSD</h2>
 									<p>Finding Friendship and Support in Your College Journey</p>
@@ -43,17 +43,17 @@
 						<div>
 							<header><h3>Love</h3>
 							</header><p>We believe that genuine friendship begins with a loving heart that goes the extra mile to meet others where they are.</p>
-							<ul class="actions"><li><a href="#" class="button alt">Learn More</a></li>
+							<ul class="actions"><li><a href="team.html" class="button alt">Learn More</a></li>
 							</ul></div>
 						<div>
 							<header><h3>Encouragement</h3>
 							</header><p>We value the role of friends in providing encouragement, which is essential for students navigating their college journey.</p>
-							<ul class="actions"><li><a href="#" class="button alt">Learn More</a></li>
+							<ul class="actions"><li><a href="team.html" class="button alt">Learn More</a></li>
 							</ul></div>
 						<div>
 							<header><h3>Mentorship</h3>
 							</header><p>We recognize that friendship involves not only sharing time and space but also offering guidance to endure the race set out for them and providing true support toward finding their true purpose in life.</p>
-							<ul class="actions"><li><a href="#" class="button alt">Learn More</a></li>
+							<ul class="actions"><li><a href="team.html" class="button alt">Learn More</a></li>
 							</ul></div>
 					</div>
 				</div>
