--- a/about.html
+++ b/about.html
@@ -19,9 +19,13 @@
                 <img src="images/pic01.jpg" alt="" width="3472" height="1035"></div>
             <div class="content">
                 <header class="align-center"><h2>Reach the Unreach</h2>
-                    <p>maecenas feugiat ex purus, quis volutpat lacus placerat</p>
-                </header><hr><p> Cras aliquet urna ut sapien tincidunt, quis malesuada elit facilisis. Vestibulum sit amet tortor velit. Nam elementum nibh a libero pharetra elementum. Maecenas feugiat ex purus, quis volutpat lacus placerat malesuada. Praesent in sem ex. Morbi mattis sapien pretium tellus venenatis, at egestas urna ornare.</p>
-                <p>Vivamus fermentum nibh vel pharetra blandit. Cras a purus urna. Sed et libero ex. Orci varius natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Suspendisse id hendrerit felis. Nulla viverra tempor dui at congue. Pellentesque quis nulla ornare, congue nisi id, finibus nulla. Aliquam sit amet hendrerit purus. Donec libero massa, posuere fermentum eros sit amet, maximus fringilla augue. Maecenas at rhoncus lorem. Vivamus ultricies consequat est, efficitur convallis libero. Vivamus rutrum semper mauris, vitae consequat eros tempor ac. Pellentesque et ornare sapien</p>
+                    <p>Our Mission, Our Vision, Our Passion, Our Value</p>
+                </header><hr><p> Let's create a UCSD ministry through relationships!</p>
+                <p>1. Relationship - First, approach through relationships.</p>
+                <p>2. Encourage - Open hearts through encouragement and support.</p>
+                <p>3. Action - Fulfill specific needs.</p>
+                <p>4. Create - Create a larger community of friends to foster a sense of belonging.</p>
+                <p>5. Hope - Introduce the true hope found in Jesus Christ and present the purpose and direction of life.</p>
             </div>
         </div>
     </div>
@@ -78,31 +82,21 @@
         <title>Contact Icons</title>
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
         <style>
-            body, html {
-			    height: 100%;
-			    margin: 0;
-			    font-family: Arial, sans-serif;
-			}
-			.content {
-				min-height: 95vh;
-				padding: 20px;
-				background: #f0f0f0;
-			}
-			.contact-box {
-				width: 100%;
-				background: rgba(0, 0, 0, 0.8); /* Semi-transparent black background */
-				color: white;
-				text-align: center;
-				padding: 10px 0;
-			}
-			.icon {
-				font-size: 20px; /* Size of the icon */
-				margin: 0 10px;
-				color: white; /* Icon color */
-			}
-			.icon:hover {
-				color: #007BFF; /* Color when mouse hovers over the icon */
-			}
+            .contact-box {
+                width: 100%;
+                background: rgba(0, 0, 0, 0.8); /* Semi-transparent black background */
+                color: white;
+                text-align: center;
+                padding: 10px 0;
+            }
+            .icon {
+                font-size: 20px; /* Size of the icon */
+                margin: 0 10px;
+                color: white; /* Icon color */
+            }
+            .icon:hover {
+                color: #007BFF; /* Color when mouse hovers over the icon */
+            }
         </style>
         </head>
         <body>
