--- a/index.html
+++ b/index.html
@@ -136,7 +136,7 @@
 						</div>
 					</section></div>
 			</footer><div class="copyright">
-				<a href="index.html">Amicus Church <span>at UCSD</span></a>.
+				<a href="index.html">Amicus Church <span>@ UC San Diego</span></a>.
 			</div>
 			
 			<head>
@@ -145,16 +145,6 @@
 				<title>Contact Icons</title>
 				<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
 				<style>
-					body, html {
-						height: 100%;
-						margin: 0;
-						font-family: Arial, sans-serif;
-					}
-					.content {
-						min-height: 95vh;
-						padding: 20px;
-						background: #f0f0f0;
-					}
 					.contact-box {
 						width: 100%;
 						background: rgba(0, 0, 0, 0.8); /* Semi-transparent black background */
@@ -171,7 +161,7 @@
 						color: #007BFF; /* Color when mouse hovers over the icon */
 					}
 				</style>
-				</head>
+			</head>
 				<body>
 				<div class="contact-box">
 					<!-- Instagram Link -->
