--- a/team.html
+++ b/team.html
@@ -3,7 +3,7 @@
 	Transitive by TEMPLATED
 	templated.co @templatedco
 	Released for free under the Creative Commons Attribution 3.0 license (templated.co/license)
---><html><head><title>About Church - Amicus Church at UCSD</title><meta charset="utf-8"><meta name="robots" content="index, follow, max-image-preview:large, max-snippet:-1, max-video-preview:-1"><meta name="viewport" content="width=device-width, initial-scale=1"><link rel="stylesheet" href="assets/css/main.css"></head><body class="subpage">
+--><html><head><title>Team - Amicus Church at UCSD</title><meta charset="utf-8"><meta name="robots" content="index, follow, max-image-preview:large, max-snippet:-1, max-video-preview:-1"><meta name="viewport" content="width=device-width, initial-scale=1"><link rel="stylesheet" href="assets/css/main.css"></head><body class="subpage">
 
 <!-- Header -->
 <header id="header"><div class="logo"><a href="index.html">Amicus Church <span>at UCSD</span></a></div>
