--- a/contact.html
+++ b/contact.html
@@ -61,7 +61,7 @@
 						</div>
 					</section></div>
 				</footer><div class="copyright">
-					<a href="index.html">Amicus Church <span>at UCSD</span></a>.
+					<a href="index.html"><span>Amicus Church @ UC San Diego</span></a>.
 				</div>
 				
 				<head>
