--- a/index.html
+++ b/index.html
@@ -136,7 +136,7 @@
 						</div>
 					</section></div>
 			</footer><div class="copyright">
-				<a href="index.html">Amicus Church <span>@ UC San Diego</span></a>.
+				<a href="index.html"><span>Amicus Church @ UC San Diego</span></a>.
 			</div>
 			
 			<head>
